force-app/main/default/objects/Region__c/Region__c.object-meta.xml
<CustomObject>
    <label>Division</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Division Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Divisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>