force-app/main/default/objects/Region__c/fields/Region_CommActual__c.field-meta.xml
<CustomField>
    <fullName>Region_CommActual__c</fullName>
    <label>Commodity Actual</label>
    <summarizedField>Centre__c.Centre_CommActual__c</summarizedField>
    <summaryForeignKey>Centre__c.Centre_Region__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>