force-app/main/default/objects/Region__c/fields/Region_CommTarget__c.field-meta.xml
<CustomField>
    <fullName>Region_CommTarget__c</fullName>
    <label>Commodity Target</label>
    <summarizedField>Centre__c.Centre_CommTarget__c</summarizedField>
    <summaryForeignKey>Centre__c.Centre_Region__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>