force-app/main/default/objects/Region__c/fields/Region_CRMActual__c.field-meta.xml
<CustomField>
    <fullName>Region_CRMActual__c</fullName>
    <label>CRM Actual</label>
    <summarizedField>Centre__c.Centre_CRMActual__c</summarizedField>
    <summaryForeignKey>Centre__c.Centre_Region__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>