force-app/main/default/objects/Region__c/fields/Region_CRMTarget__c.field-meta.xml
<CustomField>
    <fullName>Region_CRMTarget__c</fullName>
    <label>CRM Target</label>
    <summarizedField>Centre__c.Centre_CRMTarget__c</summarizedField>
    <summaryForeignKey>Centre__c.Centre_Region__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>