force-app/main/default/objects/Region__c/fields/Region_Division__c.field-meta.xml
<CustomField>
    <fullName>Region_Division__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Group</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Division is not active.</errorMessage>
        <filterItems>
            <field>Division__c.Div_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Division__c</referenceTo>
    <relationshipLabel>Divisions</relationshipLabel>
    <relationshipName>Regions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>