force-app/main/default/objects/Region__c/fields/Region_FXActual__c.field-meta.xml
<CustomField>
    <fullName>Region_FXActual__c</fullName>
    <formula>Region_FXDirectActual__c  +  Region_FXIndirectActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>