force-app/main/default/objects/Region__c/fields/Region_FXDirectActual__c.field-meta.xml
<CustomField>
    <fullName>Region_FXDirectActual__c</fullName>
    <label>FX Direct Actual</label>
    <summarizedField>Centre__c.Centre_FXDirectActual__c</summarizedField>
    <summaryForeignKey>Centre__c.Centre_Region__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>