force-app/main/default/objects/Region__c/fields/Region_FXDirectTarget__c.field-meta.xml
<CustomField>
    <fullName>Region_FXDirectTarget__c</fullName>
    <label>FX Direct Target</label>
    <summarizedField>Centre__c.Centre_FXDirectTarget__c</summarizedField>
    <summaryForeignKey>Centre__c.Centre_Region__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>