force-app/main/default/objects/Region__c/fields/Region_FXIndirectActual__c.field-meta.xml
<CustomField>
    <fullName>Region_FXIndirectActual__c</fullName>
    <label>FX Indirect Actual</label>
    <summarizedField>Centre__c.Centre_FXIndirectActual__c</summarizedField>
    <summaryForeignKey>Centre__c.Centre_Region__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>