force-app/main/default/objects/Region__c/fields/Region_FXIndirectTarget__c.field-meta.xml
<CustomField>
    <fullName>Region_FXIndirectTarget__c</fullName>
    <label>FX Indirect Target</label>
    <summarizedField>Centre__c.Centre_FXIndirectTarget__c</summarizedField>
    <summaryForeignKey>Centre__c.Centre_Region__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>