force-app/main/default/objects/Region__c/fields/Region_FXRetailActual__c.field-meta.xml
<CustomField>
    <fullName>Region_FXRetailActual__c</fullName>
    <label>FX Retail Actual</label>
    <summarizedField>Centre__c.Centre_FXRetailActual__c</summarizedField>
    <summaryFilterItems>
        <field>Centre__c.Centre_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Centre__c.Centre_Region__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>