force-app/main/default/objects/Region__c/fields/Region_FXTarget__c.field-meta.xml
<CustomField>
    <fullName>Region_FXTarget__c</fullName>
    <formula>Region_FXDirectTarget__c  +  Region_FXIndirectTarget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>