force-app/main/default/objects/Region__c/fields/Region_Group__c.field-meta.xml
<CustomField>
    <fullName>Region_Group__c</fullName>
    <formula>Region_Division__r.Div_Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank</label>
    <type>Text</type>
</CustomField>