force-app/main/default/objects/Region__c/fields/Region_IRRMActual__c.field-meta.xml
<CustomField>
    <fullName>Region_IRRMActual__c</fullName>
    <label>IRRM Actual</label>
    <summarizedField>Centre__c.Centre_IRRMActual__c</summarizedField>
    <summaryForeignKey>Centre__c.Centre_Region__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>