force-app/main/default/objects/Region__c/fields/Region_IRRMTarget__c.field-meta.xml
<CustomField>
    <fullName>Region_IRRMTarget__c</fullName>
    <label>IRRM Target</label>
    <summarizedField>Centre__c.Centre_IRRMTarget__c</summarizedField>
    <summaryForeignKey>Centre__c.Centre_Region__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>