force-app/main/default/objects/Region__c/fields/Region_NumberofChilds__c.field-meta.xml
<CustomField>
    <fullName>Region_NumberofChilds__c</fullName>
    <label>Number of Childs</label>
    <summaryFilterItems>
        <field>Centre__c.Centre_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Centre__c.Centre_Region__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>