force-app/main/default/objects/Region__c/validationRules/Division_Cannot_be_update_to_inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Division_Cannot_be_update_to_inactive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Region_NumberofChilds__c&gt;0,Text(Region_Status__c)=&#39;Inactive&#39;)</errorConditionFormula>
    <errorMessage>Division cannot be updated to Inactive ,as it contains the Active Region.</errorMessage>
</ValidationRule>